--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-linear-gradient": "^2.5.3",
+    "react-native-parallax-tabs-view": "git+https://github.com/dolsem/ReactNative-ParallaxTabsView.git",
     "react-props-decorators": "^0.2.0"
   },
   "devDependencies": {
