--- a/.eslintrc
+++ b/.eslintrc
@@ -55,6 +55,7 @@
     "import/prefer-default-export": 0,
     "import/no-unresolved": 0,
     "import/no-cycle": ["error"],
+    "react/forbid-foreign-prop-types": 0,
     "react/prop-types": 0,
     "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": 0,
