--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-native-parallax-tabs-view",
   "description": "Screen view with tabs and a parallax image header that collapses to a bar as you scroll down",
   "version": "0.0.3",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "decko": "^1.2.0",
+    "prop-types": "^15.6.2",
     "react-props-decorators": "^0.2.0"
   },
   "peerDependencies": {
