--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "decko": "^1.2.0",
     "prop-types": "^15.6.2",
+    "react-is": "^16.8.0",
     "react-props-decorators": "^0.2.0"
   },
   "peerDependencies": {
